--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,6 +31,10 @@ body{
     cursor: pointer;
     transition: 0.2s;
 }
+button:hover{
+    box-shadow: 0px 0px 8px #00ff0889;
+    transform: scale(1.05);
+}
 
 h2.titulo {
     color: #fff;
@@ -76,10 +80,6 @@ header nav ul li {
 }
 
 
-.btn-contato button:hover{
-    box-shadow: 0px 0px 8px #00ff0889;
-    transform: scale(1.05);
-}
 
 /* ESTILO DO TOPO DO SITE */
 
@@ -154,3 +154,47 @@ section.especialidades{
 section.especialidades .flex{
     gap: 60px;
 }
+
+/* ESTILO DO SOBRE */
+
+section.sobre{
+    padding: 250px 4%;
+}
+
+section.sobre .flex{
+    align-items: center;
+    gap: 60px;
+}
+
+.sobre .txt-sobre{
+    color: #fff;
+}
+
+.sobre .txt-sobre h2 {
+    font-size: 45px;
+    line-height: 50px;
+    margin-bottom: 30px;
+}
+
+.sobre .txt-sobre h2 span{
+    color: #00FF08;
+    display: block;
+}
+.sobre .txt-sobre p{
+    margin: 20px 0px;
+    text-indent: 10px;
+    text-align: justify;
+}
+
+.sobre .txt-sobre .btn-social button{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    background-color: #00FF08;
+    font-size: 28px;
+    cursor: pointer;
+    margin: 0 15px;
+    transition: 0.2s;
+}
+
