--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,200 +1,356 @@
 @charset "UTF-8";
 
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-body{
-    background-color: black;
-    height: 100vh;
+body {
+  background-color: black;
+  height: 100vh;
 }
 
 .interface {
-    max-width: 1280px;
-    margin: 0 auto;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
-.flex{
-    display: flex;
+.flex {
+  display: flex;
 }
 
 .btn-contato button {
-    padding: 10px 40px;
-    font-size: 18px;
-    font-weight: 600;
-    background-color: #00FF08;
-    border: 0;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: 0.2s;
+  padding: 10px 40px;
+  font-size: 18px;
+  font-weight: 600;
+  background-color: #00ff08;
+  border: 0;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: 0.2s;
 }
-button:hover{
-    box-shadow: 0px 0px 8px #00ff0889;
-    transform: scale(1.05);
+button:hover {
+  box-shadow: 0px 0px 8px #00ff0889;
+  transform: scale(1.05);
 }
 
 h2.titulo {
-    color: #fff;
-    font-size: 40px;
-    text-align: center;
-
+  color: #fff;
+  font-size: 40px;
+  text-align: center;
 }
 
-h2.titulo span{
-    color: #00FF08;
+h2.titulo span {
+  color: #00ff08;
 }
 
 /* ESTILO DO CABEÇALHO */
-header{
-    padding: 40px 4%;
+header {
+  padding: 40px 4%;
 }
 
 header > .interface {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 header a {
-    color: rgb(122, 122, 122);
-    text-decoration: none;
-    display: inline-block;
-    transition: .2s;
+  color: rgb(122, 122, 122);
+  text-decoration: none;
+  display: inline-block;
+  transition: 0.2s;
 }
 
 header a:hover {
-    color: white;
-    transform: scale(1.05);
+  color: white;
+  transform: scale(1.05);
 }
 
-header nav ul{
-    list-style-type: none;
+header nav ul {
+  list-style-type: none;
 }
 
 header nav ul li {
-    display: inline-block;
-    padding: 0 40px;
+  display: inline-block;
+  padding: 0 40px;
 }
-
-
 
 /* ESTILO DO TOPO DO SITE */
 
-section.topo-do-site{
-    padding: 40px 4%;
+section.topo-do-site {
+  padding: 40px 4%;
 }
 
-section.topo-do-site .flex{
-    align-items: center;
-    justify-content: center;
-    gap: 90px;
+section.topo-do-site .flex {
+  align-items: center;
+  justify-content: center;
+  gap: 90px;
 }
 
 .topo-do-site h1 {
-    color: #fff;
-    font-size: 47px;
-    line-height: 40px;
+  color: #fff;
+  font-size: 47px;
+  line-height: 40px;
 }
 
-.topo-do-site .txt-topo-site h1 span{
-    color: #00FF08;
+.topo-do-site .txt-topo-site h1 span {
+  color: #00ff08;
 }
 
-.topo-do-site .txt-topo-site p{
-    color: #fff;
-    margin: 40px 0px;
+.topo-do-site .txt-topo-site p {
+  color: #fff;
+  margin: 40px 0px;
 }
 
-.topo-do-site .img-topo-site img{
-    position: relative;
-    animation: flutuar 2s ease-in-out infinite alternate;
+.topo-do-site .img-topo-site img {
+  position: relative;
+  animation: flutuar 2s ease-in-out infinite alternate;
 }
 
-@keyframes flutuar{
-    0%{
-        top: 0;
-    }
+@keyframes flutuar {
+  0% {
+    top: 0;
+  }
 
-    100%{
-        top: 30px;
-    }
+  100% {
+    top: 30px;
+  }
 }
 
 /* ESTILOS DAS ESPECIALIDADES */
 
-section.especialidades{
-    padding: 40px 4%;
+section.especialidades {
+  padding: 40px 4%;
 }
 
-.especialidades .especialidades-box{
-    color: #fff;
-    padding: 40px;
-    margin-top: 45px;
-    border-radius: 20px;
-    transition: 0.2s;
+.especialidades .especialidades-box {
+  color: #fff;
+  padding: 40px;
+  margin-top: 45px;
+  border-radius: 20px;
+  transition: 0.2s;
 }
-.especialidades .especialidades-box i{
-    font-size: 75px;
-    color: #00FF08;
-}
-
-.especialidades .especialidades-box h3{
-    font-size: 28px;
-    margin: 15px 0px;
+.especialidades .especialidades-box i {
+  font-size: 75px;
+  color: #00ff08;
 }
 
-.especialidades .especialidades-box:hover{
-    transform: scale(1.05);
-    box-shadow: 0  0 8px #ffffff4d;
+.especialidades .especialidades-box h3 {
+  font-size: 28px;
+  margin: 15px 0px;
 }
 
-section.especialidades .flex{
-    gap: 60px;
+.especialidades .especialidades-box:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 8px #ffffff4d;
+}
+
+section.especialidades .flex {
+  gap: 60px;
 }
 
 /* ESTILO DO SOBRE */
 
-section.sobre{
-    padding: 250px 4%;
+section.sobre {
+  padding: 250px 4%;
 }
 
-section.sobre .flex{
-    align-items: center;
-    gap: 60px;
+section.sobre .flex {
+  align-items: center;
+  gap: 60px;
 }
 
-.sobre .txt-sobre{
-    color: #fff;
+.sobre .txt-sobre {
+  color: #fff;
 }
 
 .sobre .txt-sobre h2 {
-    font-size: 45px;
-    line-height: 50px;
+  font-size: 45px;
+  line-height: 50px;
+  margin-bottom: 30px;
+}
+
+.sobre .txt-sobre h2 span {
+  color: #00ff08;
+  display: block;
+}
+.sobre .txt-sobre p {
+  margin: 20px 0px;
+  text-indent: 10px;
+  text-align: justify;
+}
+
+.btn-social button {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: none;
+  background-color: #00ff08;
+  font-size: 28px;
+  cursor: pointer;
+  margin: 0 15px;
+  transition: 0.2s;
+}
+
+/* ESTILO PORTFÓLIO */
+
+section.portfolio {
+  padding: 80px 4%;
+  box-shadow: 0px 0px 40px 10px #ffffff15;
+}
+
+section.portfolio .flex {
+  justify-content: space-around;
+  margin-top: 60px;
+}
+
+.img-port {
+  width: 360px;
+  height: 460px;
+  background-size: cover;
+  background-position: 100% 0%;
+  cursor: pointer;
+  border-radius: 40px;
+  position: relative;
+}
+
+.img-port:hover {
+  background-position: 100% 100%;
+  transition: 8s;
+}
+
+.over {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: 600;
+  background-color: #000000b3;
+  color: #fff;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.over:hover {
+  opacity: 1;
+}
+
+/* ESTILO DO RODAPE */
+
+footer {
+  padding: 40px 4%;
+}
+
+footer .flex {
+  justify-content: space-between;
+}
+
+.line-footer {
+  padding: 20px 0;
+}
+
+.borda {
+  border-top: 2px solid #00ff08;
+}
+
+footer .line-footer p i {
+  color: #00ff08;
+  font-size: 30px;
+}
+
+footer .line-footer p a {
+  color: #fff;
+}
+
+@media screen and (max-width: 1020px) {
+  /* CLASSES GERAIS */
+
+  .flex {
+    flex-direction: column;
+  }
+
+  h2.titulo{
+    font-size: 34px;
+    line-height: 30px;
+  }
+
+  /* CABEÇALHO */
+  .menu-desktop,
+  .btn-contato {
+    display: none;
+  }
+
+  /* TOPO DO SITE */
+
+  section.topo-do-site {
+    padding: 20px 8%;
+  }
+
+  section.topo-do-site .flex {
+    gap: 40px;
+  }
+
+  .topo-do-site h1 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  /*ESPECIALIDADES */
+
+  section.especialidades {
+    padding: 40px 8%;
+  }
+  /* SOBRE */
+
+  section.sobre {
+    padding: 200px 8%;
+  }
+
+  .sobre .txt-sobre h2{
+    font-size: 34px;
+    line-height: 35px;
     margin-bottom: 30px;
-}
+    text-align: center;
+  }
 
-.sobre .txt-sobre h2 span{
-    color: #00FF08;
-    display: block;
-}
-.sobre .txt-sobre p{
-    margin: 20px 0px;
-    text-indent: 10px;
-    text-align: justify;
-}
+  .btn-social{
+    text-align: center;
+  }
 
-.sobre .txt-sobre .btn-social button{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: none;
-    background-color: #00FF08;
-    font-size: 28px;
-    cursor: pointer;
-    margin: 0 15px;
-    transition: 0.2s;
-}
+  .img-sobre img{
+    width: 100%;
+  }
 
+ /* PORTFOLIO */
+
+ section.portfolio {
+    padding: 80px 8%;
+  }
+
+  .img-port {
+    width: 100%;
+    max-width: 360px;
+    margin: 0 auto;
+  }
+
+  section.portfolio .flex {
+    gap: 60px;
+  }
+
+  /* RODAPE */
+
+  footer .flex {
+    align-items: center;
+    flex-direction: column;
+    gap: 40px;
+  }
+}
