--- a/estilos/style.css
+++ b/estilos/style.css
@@ -46,6 +46,77 @@ h2.titulo span {
   color: #00ff08;
 }
 
+/* ESTILO MENU MOBILE */
+
+.menu-mobile.abrir-menu{
+  width: 70%;
+}
+
+
+.menu-mobile.abrir-menu ~ .overlay-menu{
+  display: block;
+}
+
+
+.menu-mobile{
+  background-color: #000000;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 99999;
+  width: 0%;
+  overflow: hidden;
+  transition: .5s;
+}
+
+.menu-mobile nav ul{
+  text-align: right;
+}
+
+.menu-mobile nav ul li a{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+  padding: 20px 8%;
+  display: block;
+}
+
+.menu-mobile nav ul li a:hover{
+  background-color: #00ff08;
+  color: #000000;
+}
+
+.menu-mobile .btn-fechar{
+  padding: 30px 6%;
+}
+
+.menu-mobile .btn-fechar i{
+  color: #00ff08;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.btn-abrir-menu i {
+  color: #00ff08;
+  font-size: 30px;
+}
+
+.overlay-menu {
+  background-color: #000000cd;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 88888;
+  display: none;
+}
+
+.btn-abrir-menu{
+  display: none;
+}
+
 /* ESTILO DO CABEÇALHO */
 header {
   padding: 40px 4%;
@@ -64,7 +135,7 @@ header a {
   transition: 0.2s;
 }
 
-header a:hover {
+header nav.menu-desktop a:hover {
   color: white;
   transform: scale(1.05);
 }
@@ -73,7 +144,7 @@ header nav ul {
   list-style-type: none;
 }
 
-header nav ul li {
+header nav.menu-desktop ul li {
   display: inline-block;
   padding: 0 40px;
 }
@@ -284,6 +355,11 @@ footer .line-footer p a {
   }
 
   /* CABEÇALHO */
+  
+  .btn-abrir-menu{
+    display: block;
+}
+  
   .menu-desktop,
   .btn-contato {
     display: none;
